Proper Formatting Done

--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -1,12 +1,21 @@
-<p>The <a href="https://github.com/appwrite/sdk-for-cli" target="_blank" rel="noopener">Appwrite CLI</a> is a command-line application that allows you to interact with the <a href="/docs/getting-started-for-server">Appwrite server-side APIs</a> and perform server-side tasks quickly using your terminal. A few examples of these tasks including managing resources (documents, files, users), executing and packaging Cloud Functions, and any other operation available through the Appwrite API.</p>
+<p>The <a href="https://github.com/appwrite/sdk-for-cli" target="_blank" rel="noopener">Appwrite CLI</a> is a
+    command-line application that allows you to interact with the <a href="/docs/getting-started-for-server">Appwrite
+        server-side APIs</a> and perform server-side tasks quickly using your terminal. A few examples of these tasks
+    including managing resources (documents, files, users), executing and packaging Cloud Functions, and any other
+    operation available through the Appwrite API.</p>
 
 <h2><a href="/docs/command-line#gettingStarted" id="gettingStarted">Getting started</a></h2>
 
-<p>The Appwrite CLI installation is extremely easy and fast. The CLI is packaged as a Docker container, which makes it secure by default, requires no dependencies but <a href="https://docs.docker.com/get-docker/">Docker</a>, and truly platform and language agnostic.</p>
+<p>The Appwrite CLI installation is extremely easy and fast. The CLI is packaged as a Docker container, which makes it
+    secure by default, requires no dependencies but <a href="https://docs.docker.com/get-docker/">Docker</a>, and truly
+    platform and language agnostic.</p>
 
-<p>The next step is to have your Appwrite server running. You can grab our simple <a href="/docs/installation">installation command</a> and execute it.</p>
+<p>The next step is to have your Appwrite server running. You can grab our simple <a
+        href="/docs/installation">installation command</a> and execute it.</p>
 
-<p>Next, head over to <a href="http://localhost" rel="noopener" target="_blank">http://localhost</a> and create a project in the Appwrite Console, create an <a href="/docs/keys">API key</a>, and we're good to play around with the CLI.</p>
+<p>Next, head over to <a href="http://localhost" rel="noopener" target="_blank">http://localhost</a> and create a
+    project in the Appwrite Console, create an <a href="/docs/keys">API key</a>, and we're good to play around with the
+    CLI.</p>
 
 <h3><a href="/docs/command-line#installation" id="installation">Installation</a></h3>
 
@@ -17,21 +26,24 @@
         <h4>MacOS</h4>
 
         <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-            <pre class="line-numbers"><code class="prism language-bash" data-prism>curl -sL <?php echo $this->getParam('home'); ?>/cli/install.sh | bash</code></pre>
+            <pre
+                class="line-numbers"><code class="prism language-bash" data-prism>curl -sL <?php echo $this->getParam('home'); ?>/cli/install.sh | bash</code></pre>
         </div>
     </li>
     <li>
         <h4>Windows</h4>
 
         <div class="ide margin-bottom" data-lang="powershell" data-lang-label="PowerShell">
-            <pre class="line-numbers"><code class="prism language-powershell" data-prism>iwr -useb <?php echo $this->getParam('home'); ?>/cli/install.ps1 | iex</code></pre>
+            <pre
+                class="line-numbers"><code class="prism language-powershell" data-prism>iwr -useb <?php echo $this->getParam('home'); ?>/cli/install.ps1 | iex</code></pre>
         </div>
     </li>
     <li>
         <h4>Linux</h4>
 
         <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-            <pre class="line-numbers"><code class="prism language-bash" data-prism>curl -sL <?php echo $this->getParam('home'); ?>/cli/install.sh | bash</code></pre>
+            <pre
+                class="line-numbers"><code class="prism language-bash" data-prism>curl -sL <?php echo $this->getParam('home'); ?>/cli/install.sh | bash</code></pre>
         </div>
     </li>
 </ul>
@@ -51,50 +63,60 @@
 <p>Great! Now you're all set to use the Appwrite CLI. You can access your CLI using the following general syntax:</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
-    <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite [SERVICE] [COMMAND] --[OPTIONS]</code></pre>
+    <pre
+        class="line-numbers"><code class="prism language-bash" data-prism>appwrite [SERVICE] [COMMAND] --[OPTIONS]</code></pre>
 </div>
 
 <h3><a href="/docs/command-line#examples" id="examples">Examples</a></h3>
 
 <p><b>Create User</b></p>
 
-<p>To create a new user in your project, you can use the `create` command. To successfully create a user, make sure your API key is granted with the scope "users.write".</p>
+<p>To create a new user in your project, you can use the `create` command. To successfully create a user, make sure your
+    API key is granted with the scope "users.write".</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
-    <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite users create --email="hello@appwrite.io" --password="my-secret"</code></pre>
+    <pre
+        class="line-numbers"><code class="prism language-bash" data-prism>appwrite users create --email="hello@appwrite.io" --password="my-secret"</code></pre>
 </div>
 <!-- Attach image of output  -->
 
 <p><b>List Users</b></p>
 
-<p>To get a list of all your project users, you can use the `list` command. To successfully view the list, make sure your API key is granted with the scope "users.read".</p>
+<p>To get a list of all your project users, you can use the `list` command. To successfully view the list, make sure
+    your API key is granted with the scope "users.read".</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite users list</code></pre>
 </div>
 <!-- Attach image of output  -->
 
-<p><b>List Collections</b></p> 
+<p><b>List Collections</b></p>
 
-<p>To get a list of all your collections, you can use the `listCollections` command. To successfully view the list, make sure your API key is granted with the scope "collections.read".</p>
+<p>To get a list of all your collections, you can use the `listCollections` command. To successfully view the list, make
+    sure your API key is granted with the scope "collections.read".</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
-    <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite database listCollections</code></pre>
+    <pre
+        class="line-numbers"><code class="prism language-bash" data-prism>appwrite database listCollections</code></pre>
 </div>
 <!-- Attach image of output -->
 
 <p><b>Read Collection</b></p>
 
-<p>To get more information on a particular collection, you can make use of the `getCollection` command and pass in the `collectionId`.  To successfully fetch the collection, make sure your API key is granted with the scope "collections.read".</p>
+<p>To get more information on a particular collection, you can make use of the `getCollection` command and pass in the
+    `collectionId`. To successfully fetch the collection, make sure your API key is granted with the scope
+    "collections.read".</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
-    <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite database getCollection --collectionId=5ff468cfa32a0</code></pre>
+    <pre
+        class="line-numbers"><code class="prism language-bash" data-prism>appwrite database getCollection --collectionId=5ff468cfa32a0</code></pre>
 </div>
 <!-- Attach image of output -->
 
 <h3><a href="/docs/command-line#configuration" id="configuration">Configuration</a></h3>
 
-<p>At any point, if you would like to change your project endpoint, project ID, project Key, selfSigned certificate acceptance or locale configuration you set during the CLI init, you can make use of the `client` service.</p>
+<p>At any point, if you would like to change your project endpoint, project ID, project Key, selfSigned certificate
+    acceptance or locale configuration you set during the CLI init, you can make use of the `client` service.</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite client setEndpoint --endpoint="http://192.168.1.6/v1"
@@ -106,4 +128,6 @@ appwrite client setLocale --locale="en-US"</code></pre>
 
 <h3><a href="/docs/command-line#help" id="help">Help</a></h3>
 
-<p>If you get stuck anywhere, you can always use the `help` command to get the usage examples. All the examples are also available on the Appwrite API specs docs, and you can view them by switching the examples to the "Appwrite CLI" from the top dropdown.</p>
+<p>If you get stuck anywhere, you can always use the `help` command to get the usage examples. All the examples are also
+    available on the Appwrite API specs docs, and you can view them by switching the examples to the "Appwrite CLI" from
+    the top dropdown.</p>
