--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -17,7 +17,8 @@ $cols = [
     <div class="row responsive text-size-small">
         <div class="col <?php echo $cols[$layout]['nav']; ?>">
             <nav data-ui-highlight data-ls-ui-open>
-                <h2 class="margin-start-negative-tiny"><i class="icon-menu"></i><i class="icon-cancel"></i> &nbsp; Table of contents</h2>
+                <h2 class="margin-start-negative-tiny"><i class="icon-menu"></i><i class="icon-cancel"></i> &nbsp; Table
+                    of contents</h2>
 
                 <ul class="margin-bottom">
                     <li><a href="/docs">Home</a></li>
@@ -33,11 +34,21 @@ $cols = [
                         <a href="/docs/installation"><i class="icon-right-dir"></i> Installation</a>
 
                         <ul class="margin-top-small margin-bottom-small">
-                            <li>&nbsp;&nbsp;<a href="/docs/production" data-selected="/docs/installation"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Production</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/environment-variables" data-selected="/docs/installation"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Env. Variables</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/email-delivery" data-selected="/docs/installation"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Email Delivery</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/debugging" data-selected="/docs/installation"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Debugging</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/upgrade" data-selected="/docs/installation"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Upgrade</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/production" data-selected="/docs/installation"><i
+                                        class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>
+                                    Production</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/environment-variables" data-selected="/docs/installation"><i
+                                        class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>
+                                    Env. Variables</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/email-delivery" data-selected="/docs/installation"><i
+                                        class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>
+                                    Email Delivery</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/debugging" data-selected="/docs/installation"><i
+                                        class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>
+                                    Debugging</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/upgrade" data-selected="/docs/installation"><i
+                                        class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>
+                                    Upgrade</a></li>
                         </ul>
                     </li>
                     <li><a href="/docs/getting-started-for-web">Appwrite for Web</a></li>
@@ -96,7 +107,7 @@ $cols = [
                     <?php echo $this->escape($title); ?>
 
                     <?php if (!empty($subtitle)) : ?>
-                        &nbsp;<span class="text-fade text-size-normal">| <?php echo $this->escape($subtitle); ?></span>
+                    &nbsp;<span class="text-fade text-size-normal">| <?php echo $this->escape($subtitle); ?></span>
                     <?php endif; ?>
                 </h1>
 
