--- a/app/views/docs/overview.phtml
+++ b/app/views/docs/overview.phtml
@@ -1,13 +1,23 @@
-<p>Appwrite is an end-to-end backend server that is aiming to abstract the complexity of common, complex, and repetitive tasks required for building a modern app.</p>
+<p>Appwrite is an end-to-end backend server that is aiming to abstract the complexity of common, complex, and repetitive
+    tasks required for building a modern app.</p>
 
-<p>Appwrite provides you with a set of APIs, tools, and a management console UI to help you build your apps a lot faster and in a much more secure way. Between Appwrite different services, you can find user authentication and account management, user preferences, database and storage persistence, cloud functions, localization, image manipulation, scheduled background tasks, and more.</p>
+<p>Appwrite provides you with a set of APIs, tools, and a management console UI to help you build your apps a lot faster
+    and in a much more secure way. Between Appwrite different services, you can find user authentication and account
+    management, user preferences, database and storage persistence, cloud functions, localization, image manipulation,
+    scheduled background tasks, and more.</p>
 
 <h3>Appwrite is Cross-Platform</h2>
 
-<p>Appwrite is both cross-platform and technology agnostic, meaning it can run on any operating system, coding language, or platform. Although Appwrite can easily fit the definition of serverless technology, it's designed to run well in multiple configurations. You can integrate Appwrite directly with your client app, use it behind your custom backend or alongside your backend server.</p>
+    <p>Appwrite is both cross-platform and technology agnostic, meaning it can run on any operating system, coding
+        language, or platform. Although Appwrite can easily fit the definition of serverless technology, it's designed
+        to run well in multiple configurations. You can integrate Appwrite directly with your client app, use it behind
+        your custom backend or alongside your backend server.</p>
 
-<p>There are many cases where Appwrite can be used as an alternative to your custom backend server, but it doesn't purport to replace your backend engineers. It would be best if you thought of Appwrite as a tool at your disposal that you can combine into your stack any way you see fit.</p>
+    <p>There are many cases where Appwrite can be used as an alternative to your custom backend server, but it doesn't
+        purport to replace your backend engineers. It would be best if you thought of Appwrite as a tool at your
+        disposal that you can combine into your stack any way you see fit.</p>
 
-<h3>Appwrite was Designed for Security</h2>
+    <h3>Appwrite was Designed for Security</h2>
 
-<p>Appwrite offers a lot of different services to help you get a better starting point to your projects, and we are continually adding new features and services that are all aiming to make developers' lives easier.</p>
+        <p>Appwrite offers a lot of different services to help you get a better starting point to your projects, and we
+            are continually adding new features and services that are all aiming to make developers' lives easier.</p>
