--- a/app/views/docs/keys.phtml
+++ b/app/views/docs/keys.phtml
@@ -2,29 +2,32 @@
 $scopes = $this->getParam('scopes', );
 ?>
 
-<p>Using your API Keys, you can access Appwrite services using the SDK of your choice. To create a new API key, go to your API keys tab in your project setting using your Appwrite console and click the 'Add API Key' button.</p>
+<p>Using your API Keys, you can access Appwrite services using the SDK of your choice. To create a new API key, go to
+    your API keys tab in your project setting using your Appwrite console and click the 'Add API Key' button.</p>
 
-<p>When adding a new API Key, you can choose which permission scope to grant your application. It is a best practice to allow only the permissions you need to meet your project goals.</p>
+<p>When adding a new API Key, you can choose which permission scope to grant your application. It is a best practice to
+    allow only the permissions you need to meet your project goals.</p>
 
-<p>If you need to replace your API Key, create a new key, update your app credentials and, once ready, delete your old key.</p>
+<p>If you need to replace your API Key, create a new key, update your app credentials and, once ready, delete your old
+    key.</p>
 
 <h2 id="scopes">Scopes</h2>
 
 <table class="full text-size-small">
     <thead>
-    <tr>
-        <td style="width: 140px">Name</td>
-        <td>Description</td>
-    </tr>
+        <tr>
+            <td style="width: 140px">Name</td>
+            <td>Description</td>
+        </tr>
     </thead>
     <tbody>
-    <?php foreach ($scopes as $key => $scope):
+        <?php foreach ($scopes as $key => $scope):
         $description = $scope['description'] ?? '';
         ?>
-    <tr>
-        <td><?php echo $this->escape($key); ?></td>
-        <td><?php echo $this->escape($description); ?></td>
-    </tr>
-    <?php endforeach; ?>
+        <tr>
+            <td><?php echo $this->escape($key); ?></td>
+            <td><?php echo $this->escape($description); ?></td>
+        </tr>
+        <?php endforeach; ?>
     </tbody>
 </table>
