--- a/app/views/general/image.phtml
+++ b/app/views/general/image.phtml
@@ -6,11 +6,13 @@ $description = $this->getParam('description', '');
 ?>
 <figure>
     <picture>
-        <img class="force-light" alt="<?php echo $this->escape($alt); ?>" src="<?php echo $this->escape($srcLight); ?>?v=<?php echo APP_CACHE_BUSTER; ?>" loading="lazy">
-        <img class="force-dark" alt="<?php echo $this->escape($alt); ?>" src="<?php echo $this->escape($srcDark); ?>?v=<?php echo APP_CACHE_BUSTER; ?>" loading="lazy">
+        <img class="force-light" alt="<?php echo $this->escape($alt); ?>"
+            src="<?php echo $this->escape($srcLight); ?>?v=<?php echo APP_CACHE_BUSTER; ?>" loading="lazy">
+        <img class="force-dark" alt="<?php echo $this->escape($alt); ?>"
+            src="<?php echo $this->escape($srcDark); ?>?v=<?php echo APP_CACHE_BUSTER; ?>" loading="lazy">
     </picture>
-    
+
     <?php if(!empty($description)): ?>
-        <figcaption class="text-fade"><?php echo $this->escape($description); ?></figcaption>
+    <figcaption class="text-fade"><?php echo $this->escape($description); ?></figcaption>
     <?php endif; ?>
 </figure>
